--- a/nopCommerce_1/pom.xml
+++ b/nopCommerce_1/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>nopCommerce_Cucumber</groupId>
-  <artifactId>nopCommerce_Cucumber</artifactId>
+  <groupId>nopCommerce_1</groupId>
+  <artifactId>nopCommerce_1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-   <dependencies>
+  <dependencies>
 	
 	<dependency>
      <groupId>info.cukes</groupId>
@@ -106,6 +106,11 @@
 </dependency>
 
 
+	<dependency>
+		<groupId>Ecommerce</groupId>
+		<artifactId>Ecommerce</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
   
 </project>
